[project]
name = "time-series-visualization-for-business-analysis-wi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arch>=8.0.0",
    "darts>=0.44.1",
    "geopandas>=1.1.3",
    "imageio>=2.37.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "orbit-ml>=1.1.5.0",
    "pandas>=2.3.3",
    "plotsmith>=0.2.0",
    "prophet>=1.3.0",
    "pycaret>=2.2.2",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tensorflow>=2.21.0",
    "timesmith>=0.1.2",
]
